trunk/Archive2/d6/f7a3f4d2dfa552/output
main.cpp:3:1: error: extraneous template parameter list in template specialization or out-of-line template definition
template<typename _Tp, typename _Alloc>
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:6:7: error: expected ';' at end of declaration
vector<_Tp, _Alloc>::
      ^
      ;
main.cpp:6:7: error: expected unqualified-id
main.cpp:23:8: error: unknown type name '_LIBCPP_INLINE_VISIBILITY'
inline _LIBCPP_INLINE_VISIBILITY
       ^
main.cpp:24:1: error: expected unqualified-id
void
^
5 errors generated.
